# wasm-paint

./: .editorconfig  .gitignore  1.aa37b8a6.js  1.d58f024f.js  2.8550f75d.js  2.c20c807f.js  521.b9af95db.js  704.986af4fe.js  Cargo.toml  LICENSE  README.md  build.sh  index.html  main.0264d153.js  main.59877192.js  main.f9363981.js  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
public/: index.html
src/: App.tsx  bootstrap.js  index.tsx
src/components/: GithubLink.tsx
src/rust/: canvas.rs  lib.rs  picker.rs
src/styles/: styles.css
src/types/: files.d.ts
